Update api docs config FOLIO-903
Added platform for mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -101,6 +101,7 @@ mod-inventory-storage:
       - identifier-type
       - loan-type
       - material-type
+      - platform
       - shelf-location
     ramlutil: ramls/raml-util
 
