Add 's3:delete' permission to CodeBuildServiceRole
Fixes FOLIO-990

--- a/work/amazon-web-services/website-master_cloudformation.yml
+++ b/work/amazon-web-services/website-master_cloudformation.yml
@@ -258,6 +258,7 @@ Resources:
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
                   - 'events:*'
+                  - 's3:DeleteObject'
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:GetObjectVersion'
