--- a/work/amazon-web-services/website-master_cloudformation.yml
+++ b/work/amazon-web-services/website-master_cloudformation.yml
@@ -258,7 +258,6 @@ Resources:
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
                   - 'events:*'
-                  - 's3:DeleteObject'
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:GetObjectVersion'
@@ -397,6 +396,21 @@ Resources:
       Targets:
         - Arn: !Ref WebsiteErrorQueue
           Id: WebsiteCodeBuildError
+
+  CodeBuildFailedTopicPolicy:
+    Type: AWS::SNS::TopicPolicy
+    Properties:
+      PolicyDocument:
+        Id: Allow CodeBuild Publish to Topic
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service: codebuild.amazonaws.com
+          Action: sns:Publish
+          Resource: "*"
+      Topics:
+      - !Ref WebsiteErrorQueue
 
   CloudFormationBranchRole:
     Type: 'AWS::IAM::Role'
