Fix CodeBuildFailedTopicPolicy and add s3:delete
Fixes FOLIO-991 and puts back the changes that were in FOLIO-990.

--- a/work/amazon-web-services/website-master_cloudformation.yml
+++ b/work/amazon-web-services/website-master_cloudformation.yml
@@ -258,6 +258,7 @@ Resources:
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
                   - 'events:*'
+                  - 's3:DeleteObject'
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:GetObjectVersion'
@@ -401,12 +402,12 @@ Resources:
     Type: AWS::SNS::TopicPolicy
     Properties:
       PolicyDocument:
-        Id: Allow CodeBuild Publish to Topic
+        Id: Allow CodeBuild Publish to Topic via Events
         Version: '2012-10-17'
         Statement:
         - Effect: Allow
           Principal:
-            Service: codebuild.amazonaws.com
+            Service: events.amazonaws.com
           Action: sns:Publish
           Resource: "*"
       Topics:
