--- a/_data/setup.yml
+++ b/_data/setup.yml
@@ -27,11 +27,11 @@ secondary-column: left
 # The tertiary column must reside in the "_includes" directory and is called "tertiary-column.html"
 # Front matter can specify a different file for the tertiary column ("tertiary-column-content").
 #
-tertiary-column: present
+tertiary-column: none
 
 # A subtitle can be displayed in de banner
 #
-subtitle: "easy to use and highly customizable"
+subtitle: ""
 
 # Skip some of the build process for faster recompilation during content creation.
 # Values: yes | no
@@ -48,7 +48,7 @@ fast-content-build: no
 # - yes: Upload the image to be used as favicon to that site, create the favicon files in a folder called 'icons', download the generated file and replace the contents of the site's icons directory with the files from realfavicongenerator.
 # - no: The folder 'icons' can be removed.
 #
-realfavicongenerator: yes
+realfavicongenerator: no
 
 # For the number of posts visible on the home page.
 # Value: > 0
@@ -63,7 +63,7 @@ number-of-recent-posts-in-widget: 10
 # Enables or disables the cookies warning.
 # Values: yes | no
 #
-enable-cookies-policy: yes
+enable-cookies-policy: no
 
 # Controls the position of the banner and menubar.
 # Values: top | main | top-fixed
@@ -74,7 +74,7 @@ enable-cookies-policy: yes
 #
 # Hint: When the 'top-fixed' is used a background color should be specified for the banner and menu. 
 #
-banner-position: top-fixed
+banner-position: top
 
 # Switches between drop-down menu's en the vertical menu for the subMenuTitles. It does not affect the top menu items with the exception of the 'Categories' item.
 # Values: yes | no
@@ -85,14 +85,14 @@ banner-position: top-fixed
 # Note 2: This setting can affect the use-separate-navbanner setting.
 # Note 3: When the drop-down menus are not used, any items in the menubar without a linked page will become useless.
 #
-drop-down-menu: yes 
+drop-down-menu: yes
 
 # Controls the generation of the categories menu entry in the menu bar if the drop-down-menu option is set to 'yes'. Has no impact on the categories widget.
 # Values: yes | no
 # - yes: The categories menu entry is generated if -and only if- the drop-down-menu option is set to 'yes'.
 # - no : The categories menu entry is not generated.
 #
-generate-categories-menu: yes
+generate-categories-menu: no
 
 # Create a separate file containing the banner and menubar.
 # Values: yes | no
