--- a/_data/text-for.yml
+++ b/_data/text-for.yml
@@ -1,7 +1,7 @@
 # Language customization for default theme elements
 
 # Menu item
-tHome: Home
+tHome: dev.FOLIO.org
 
 # Title on home page
 tPosts: Posts
@@ -28,7 +28,7 @@ tTags: Tags
 tRecent: Recent
 
 # Part title of social media widget
-tSocialMediaResources: Social Media & Resources
+tSocialMediaResources: GitHub and Twitter
 
 # Title of subscription widget
 tSubscribe: Subscribe
