--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,12 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://dev.folio.org" # the base hostname & protocol for your site
 google_analytics: UA-79833310-3
+github_username: folio-org
+twitter_username: folio_lsp
 
 # Build settings
-remote_theme: Balancingrock/classic-jekyll-theme@1.9.4
+# 2017-12-15: using dev branch
+remote_theme: Balancingrock/classic-jekyll-theme@6b12bdb
 markdown: kramdown
 plugins:
   - jekyll-remote-theme
