Use s3api to update website bucket config

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,6 +24,7 @@ phases:
     commands:
       - echo "******** Uploading to S3 ********"
       - aws s3 sync --delete _site/ "s3://${BUCKET_NAME}"
+      - aws s3api put-bucket-website --bucket "${BUCKET_NAME}" --website-configuration file://s3-website-config.json
 #artifacts:
   #files:
     # - location
