Add permission to set bucket website config

--- a/work/amazon-web-services/website-master_cloudformation.yml
+++ b/work/amazon-web-services/website-master_cloudformation.yml
@@ -262,6 +262,7 @@ Resources:
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:GetObjectVersion'
+                  - 's3:PutBucketWebsite'
                 Resource: '*'
                 Effect: Allow
               - Action: 'sns:Publish'
