--- a/work/amazon-web-services/website-branch_cloudformation.yml
+++ b/work/amazon-web-services/website-branch_cloudformation.yml
@@ -32,8 +32,8 @@ Resources:
       Name: !Sub "${WebsiteBranchLabel}.${WebsiteDNSName}."
       Type: A
       AliasTarget:
-        HostedZoneId: !FindInMap [ RegionMap, !Ref 'AWS::Region', S3hostedzoneID]
-        DNSName: !FindInMap [ RegionMap, !Ref 'AWS::Region', websiteendpoint]
+        HostedZoneId: !FindInMap [ Region2S3WebsiteSuffix, !Ref 'AWS::Region', S3hostedzoneID]
+        DNSName: !FindInMap [ Region2S3WebsiteSuffix, !Ref 'AWS::Region', websiteendpoint]
 Parameters:
   WebsiteBranchLabel:
     Type: String
