--- a/work/amazon-web-services/website-branch_cloudformation.yml
+++ b/work/amazon-web-services/website-branch_cloudformation.yml
@@ -32,8 +32,8 @@ Resources:
       Name: !Sub "${WebsiteBranchLabel}.${WebsiteDNSName}."
       Type: A
       AliasTarget:
-        HostedZoneId: !FindInMap [ Region2S3WebsiteSuffix, !Ref 'AWS::Region', S3hostedzoneID]
-        DNSName: !FindInMap [ Region2S3WebsiteSuffix, !Ref 'AWS::Region', websiteendpoint]
+        HostedZoneId: !FindInMap [ Region2S3WebsiteEndpoint, !Ref 'AWS::Region', S3hostedzoneID]
+        DNSName: !FindInMap [ Region2S3WebsiteEndpoint, !Ref 'AWS::Region', S3WebsiteEndpoint]
 Parameters:
   WebsiteBranchLabel:
     Type: String
@@ -48,53 +48,52 @@ Parameters:
     Type: String
     Description: GitHub Statuses URL; held here to be used by the CF completion lambda
 Mappings:
-  Region2S3WebsiteSuffix:
+  Region2S3WebsiteEndpoint:
     ap-northeast-1:
       S3hostedzoneID: "Z2M4EHUR26P7ZW"
-      websiteendpoint: "s3-website-ap-northeast-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-ap-northeast-1.amazonaws.com"
     ap-northeast-2:
       S3hostedzoneID: "Z3W03O7B5YMIYP"
-      websiteendpoint: "s3-website.ap-northeast-2.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website.ap-northeast-2.amazonaws.com"
     ap-south-1:
       S3hostedzoneID: "Z11RGJOFQNVJUP"
-      websiteendpoint: "s3-website.ap-south-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website.ap-south-1.amazonaws.com"
     ap-southeast-1:
       S3hostedzoneID: "Z3O0J2DXBE1FTB"
-      websiteendpoint: "s3-website-ap-southeast-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-ap-southeast-1.amazonaws.com"
     ap-southeast-2:
       S3hostedzoneID: "Z1WCIGYICN2BYD"
-      websiteendpoint: "s3-website-ap-southeast-2.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-ap-southeast-2.amazonaws.com"
     eu-central-1:
       S3hostedzoneID: "Z21DNDUVLTQW6Q"
-      websiteendpoint: "s3-website.eu-central-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website.eu-central-1.amazonaws.com"
     eu-west-1:
       S3hostedzoneID: "Z1BKCTXD74EZPE"
-      websiteendpoint: "s3-website-eu-west-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-eu-west-1.amazonaws.com"
     sa-east-1:
       S3hostedzoneID: "Z7KQH4QJS55SO"
-      websiteendpoint: "s3-website-sa-east-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-sa-east-1.amazonaws.com"
     us-east-1:
       S3hostedzoneID: "Z3AQBSTGFYJSTF"
-      websiteendpoint: "s3-website-us-east-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-us-east-1.amazonaws.com"
     us-east-2:
       S3hostedzoneID: "Z2O1EMRO9K5GLX"
-      websiteendpoint: "s3-website.us-east-2.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website.us-east-2.amazonaws.com"
     us-west-1:
       S3hostedzoneID: "Z2F56UZL2M1ACD"
-      websiteendpoint: "s3-website-us-west-1.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-us-west-1.amazonaws.com"
     us-west-2:
       S3hostedzoneID: "Z3BJ6K6RIION7M"
-      websiteendpoint: "s3-website-us-west-2.amazonaws.com"
+      S3WebsiteEndpoint: "s3-website-us-west-2.amazonaws.com"
 Outputs:
   WebsiteURL:
     Value: !Join
       - ''
-      - - 'http://'
-        - !Ref WebsiteBranchRecordSet
+      - - !Sub 'http://${WebsiteBranchRecordSet}.'
         - !FindInMap
-          - Region2S3WebsiteSuffix
+          - Region2S3WebsiteEndpoint
           - !Ref 'AWS::Region'
-          - websiteendpoint
+          - S3WebsiteEndpoint
     Description: The URL of the newly created website
   BucketName:
     Value: !Ref 'WebsiteBranchBucket'
