--- a/_data/api.yml
+++ b/_data/api.yml
@@ -97,7 +97,7 @@ mod-inventory-storage:
       - item-storage
       - classification-type
       - contributor-type
-      - creator-type
+      - contributor-name-type
       - identifier-type
       - loan-type
       - material-type
