--- a/_data/guidelines.yml
+++ b/_data/guidelines.yml
@@ -1,7 +1,7 @@
 - title: Community Guidelines
   guidelines:
   - communityguidelines
-- title: License
+- title: Contributor License Agreement
   guidelines:
   - cla-process 
 - title: Contributing Code
