Copy original content from old curriculum repository
From
https://github.com/folio-org/curriculum/tree/878c57ad4c69f8543acc8bce8d1
d5be1278a16ee 2017-11-22
Renamed files to follow rest of site "-" rather than "_".

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ plugins:
   - jekyll-feed
   - jekyll-gist
 
-exclude: [bin, Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, tmp, vendor, work]
+exclude: [bin, Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, playbooks, tmp, vendor, work]
 
 collections:
   posts:
