Add url redirection for old Curriculum
FOLIO-966
All old /curriculum/* to new /tutorials/curriculum/ introduction page.

--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -13,6 +13,14 @@
       "Redirect": {
         "ReplaceKeyWith": "doc/api"
       }
+    },
+    {
+      "Condition": {
+        "KeyPrefixEquals": "curriculum/"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "tutorials/curriculum/"
+      }
     }
   ]
 }
