separated glossary and api specifications back into two files

--- a/_data/reference.yml
+++ b/_data/reference.yml
@@ -1,3 +1,6 @@
-- title: Reference
+- title: API Specifications
   reference:
-  - refinfo
+  - apispecifications
+- title: Glossary
+  reference:
+  - glossary
