Add config raml-util mod-user-import FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -117,7 +117,7 @@ mod-user-import:
     directory: ramls
     files:
       - import
-    ramlutil: null
+    ramlutil: ramls/raml-util
 
 mod-finance:
   - label: null
