--- a/_data/api.yml
+++ b/_data/api.yml
@@ -100,6 +100,8 @@ mod-inventory-storage:
       - contributor-name-type
       - identifier-type
       - loan-type
+      - location
+      - locationunit
       - material-type
       - platform
       - shelf-location
