Update api docs config FOLIO-903
Add mod-feesfines, mod-calendar

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -121,6 +121,13 @@ mod-user-import:
       - import
     ramlutil: ramls/raml-util
 
+mod-calendar:
+  - label: null
+    directory: ramls
+    files:
+      - calendar
+    ramlutil: null
+
 mod-finance:
   - label: null
     directory: ramls
@@ -132,6 +139,18 @@ mod-finance:
       - ledger
       - tag
       - transaction
+    ramlutil: ramls/raml-util
+
+mod-feesfines:
+  - label: null
+    directory: ramls
+    files:
+      - accounts
+      - chargeitem
+      - feefineactions
+      - feefinehistory
+      - feefines
+      - owners
     ramlutil: ramls/raml-util
 
 mod-notes:
