--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -24,6 +24,14 @@
     },
     {
       "Condition": {
+        "KeyPrefixEquals": "doc/artifacts"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "download/artifacts"
+      }
+    },
+    {
+      "Condition": {
         "KeyPrefixEquals": "doc/glossary"
       },
       "Redirect": {
