Add initial Guidelines section
mv doc/release-procedures.md guidelines

--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -48,6 +48,14 @@
     },
     {
       "Condition": {
+        "KeyPrefixEquals": "doc/release-procedures"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guidelines/release-procedures"
+      }
+    },
+    {
+      "Condition": {
         "KeyPrefixEquals": "curriculum/"
       },
       "Redirect": {
