Move other guidelines docs
mv doc/create-new-repo.md guidelines
mv community/which-forum.md guidelines
mv community/guide-issues.md guidelines/issue-tracker.md

--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -24,6 +24,14 @@
     },
     {
       "Condition": {
+        "KeyPrefixEquals": "community/guide-issues"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guidelines/issue-tracker"
+      }
+    },
+    {
+      "Condition": {
         "KeyPrefixEquals": "doc/any-programming-language"
       },
       "Redirect": {
@@ -36,6 +44,14 @@
       },
       "Redirect": {
         "ReplaceKeyWith": "download/artifacts"
+      }
+    },
+    {
+      "Condition": {
+        "KeyPrefixEquals": "doc/create-new-repo"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guidelines/create-new-repo"
       }
     },
     {
