Move other guidelines docs
mv community/cla-process.md guidelines
mv community/contrib-code.md guidelines/contributing.md

--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -24,6 +24,22 @@
     },
     {
       "Condition": {
+        "KeyPrefixEquals": "community/cla-process"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guidelines/cla-process"
+      }
+    },
+    {
+      "Condition": {
+        "KeyPrefixEquals": "community/contrib-code"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guidelines/contributing"
+      }
+    },
+    {
+      "Condition": {
         "KeyPrefixEquals": "community/guide-issues"
       },
       "Redirect": {
