Move other guides docs
mv doc/setup.md guides/developer-setup.md
mv doc/automation.md guides
mv doc/best-practices-dockerfiles.md guides
mv doc/code-analysis.md guides

--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -56,6 +56,14 @@
     },
     {
       "Condition": {
+        "KeyPrefixEquals": "doc/automation"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guides/automation"
+      }
+    },
+    {
+      "Condition": {
         "KeyPrefixEquals": "doc/artifacts"
       },
       "Redirect": {
