Update api docs config FOLIO-903
Add service-point for mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -104,6 +104,7 @@ mod-inventory-storage:
       - locationunit
       - material-type
       - platform
+      - service-point
       - shelf-location
     ramlutil: ramls/raml-util
 
