--- a/s3-website-config.json
+++ b/s3-website-config.json
@@ -96,6 +96,14 @@
     },
     {
       "Condition": {
+        "KeyPrefixEquals": "doc/troubleshooting"
+      },
+      "Redirect": {
+        "ReplaceKeyWith": "guides/troubleshooting"
+      }
+    },
+    {
+      "Condition": {
         "KeyPrefixEquals": "curriculum/"
       },
       "Redirect": {
