Update api docs config FOLIO-903
Add mod-tags

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -168,6 +168,13 @@ mod-notify:
       - notify
     ramlutil: ramls/raml-util
 
+mod-tags:
+  - label: null
+    directory: ramls
+    files:
+      - tags
+    ramlutil: ramls/raml-util
+
 mod-orders:
   - label: null
     directory: ramls
