--- a/_data/api.yml
+++ b/_data/api.yml
@@ -174,6 +174,13 @@ mod-tags:
     files:
       - tags
     ramlutil: ramls/raml-util
+    
+mod-rtac
+  - label: null
+    directory: ramls
+    files:
+      - rtac
+    ramlutil: ramls/raml-util
 
 mod-orders:
   - label: null
