--- a/_data/api.yml
+++ b/_data/api.yml
@@ -187,7 +187,7 @@ mod-data-loader:
     directory: ramls
     files:
       - loader
-    ramlutil: ramls/raml-util
+    ramlutil: ramls/inventory/raml-util
 
 mod-orders:
   - label: null
