--- a/_data/api.yml
+++ b/_data/api.yml
@@ -175,6 +175,13 @@ mod-tags:
       - tags
     ramlutil: ramls/raml-util
 
+mod-kb-ebsco:
+  - label: null
+    directory: ramls
+    files:
+      - eholdings
+    ramlutil: null
+
 mod-rtac:
   - label: null
     directory: ramls
