Update api docs config FOLIO-903
Add config for raml-util for mod-kb-ebsco

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -180,7 +180,7 @@ mod-kb-ebsco:
     directory: ramls
     files:
       - eholdings
-    ramlutil: null
+    ramlutil: ramls/raml-util
 
 mod-rtac:
   - label: null
