change ramlutil to 'null' for mod-kb-ebsco

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -180,7 +180,7 @@ mod-kb-ebsco:
     directory: ramls
     files:
       - eholdings
-    ramlutil: ramls/raml-util
+    ramlutil: null
 
 mod-rtac:
   - label: null
