Add excludes mod-data-loader FOLIO-1253 DIMPT-3

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -194,6 +194,8 @@ mod-data-loader:
     directory: ramls
     files:
       - loader
+    excludes:
+      - inventory
     ramlutil: ramls/inventory/raml-util
 
 mod-orders:
