Add excludes in mod-kb-ebsco
Some branches are using their own types.

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -185,6 +185,8 @@ mod-kb-ebsco:
     directory: ramls
     files:
       - eholdings
+    excludes:
+      - types
     ramlutil: ramls/raml-util
 
 mod-rtac:
