Exclude view-2 if RAML-1.0
Alternative view is not yet available. Currently only mod-kb-ebsco.

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -183,6 +183,7 @@ mod-tags:
 mod-kb-ebsco:
   - label: null
     directory: ramls
+    version1: true
     files:
       - eholdings
     excludes:
