Adjust dev.folio.org theme config for projectwide navbar

--- a/_data/text-for.yml
+++ b/_data/text-for.yml
@@ -1,7 +1,7 @@
 # Language customization for default theme elements
 
 # Menu item
-tHome: dev.folio
+tHome: Developer's Website
 
 # Title on home page
 tPosts: Posts
