--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: FOLIO Developer
+title: FOLIO Developers
 description: >
   FOLIO is a new open source, cloud hostable, app-store based
   library platform, designed to facilitate collaboration between
