Set home link text to dev.folio
Any more than 9 chars is too wide for menu row
when in medium width.
Had already minimised text for menu items and spacing.

--- a/_data/text-for.yml
+++ b/_data/text-for.yml
@@ -1,7 +1,7 @@
 # Language customization for default theme elements
 
 # Menu item
-tHome: Developer's Website
+tHome: dev.folio
 
 # Title on home page
 tPosts: Posts
