--- a/_data/api.yml
+++ b/_data/api.yml
@@ -157,6 +157,11 @@ mod-feesfines:
       - feefinehistory
       - feefines
       - owners
+      - payments
+      - refunds
+      - transfers
+      - transfertypes
+      - waives
     ramlutil: ramls/raml-util
 
 mod-notes:
