Update api docs config FOLIO-903
More files for mod-feesfines

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -153,6 +153,7 @@ mod-feesfines:
     files:
       - accounts
       - chargeitem
+      - comments
       - feefineactions
       - feefinehistory
       - feefines
