Update api docs config FOLIO-903
mod-calendar now has raml-util

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -134,7 +134,7 @@ mod-calendar:
     directory: ramls
     files:
       - calendar
-    ramlutil: null
+    ramlutil: ramls/raml-util
 
 mod-finance:
   - label: null
