--- a/_data/api.yml
+++ b/_data/api.yml
@@ -251,3 +251,12 @@ edge-rtac:
     files:
       - edge-rtac
     ramlutil: null
+
+edge-orders:
+  - label: null
+    directory: ramls
+    files:
+      - edge-orders
+    ramlutil: null
+
+
